# RandomAvatars

./: .coverage  .env  .env.example  .gitignore  Dockerfile  README.md  __main__.py  config.py  deno.json  deps.ts  docker-compose.yml  global.d.ts  global.ts  pyproject.toml  run.sh  texts.yml
api/: Dockerfile  __init__.py  __main__.py  config.py  enums.py  enums.ts  helpers.py  loader.py  mod.ts  pyproject.toml  texts.ts
api/core/: __init__.py  database.py  document.py
api/database/: __init__.py  database.py  models.py
api/src/: __main__.py  config.py  enums.py  handlers.py  loader.py
api/src/core/: __init__.py  config.py  response.py
api/src/database/: database.py  models.py
bot/: .gitignore  Dockerfile  config.py  pyproject.toml
bot/cli/: config.py  generate.py  test.py
bot/cli/templates/: __init__.txt
bot/cli/templates/handler/: assets.py  handler.py  lib.py
bot/core/: .gitignore  dispatcher.py  pyproject.toml
bot/core/core/: __init__.py  api.py  bot.py  constants.py  controller.py  dispatcher.py  handler.py  shortcuts.py  storage.py  utils.py
bot/core/core/keyboards/: __init__.py  inline_keyboard.py  reply_keyboard.py
bot/handlers/: __init__.py  get_paired.py  start.py
bot/handlers/admin/: admin.py
bot/handlers/admin/broadcast/: broadcast.py  post.py
bot/handlers/picture_menu/: get_another.py
bot/src/: __main__.py  config.py  loader.py
bot/src/_assets/: texts.py
bot/src/_handlers/: __init__.py
bot/src/_handlers/GetCommands/: lib.py
bot/src/_handlers/SendPicture/: assets.py
bot/src/_handlers/Start/: __init__.py  controller.py
bot/src/_handlers/TextMessage/: assets.py  controller.py  lib.py
bot/src/_handlers/errors/: assets.py  handler.py
bot/src/_handlers/send_picture/: __init__.py  handler.py
bot/src/_handlers/start/: assets.py  handler.py
bot/src/_handlers/text/: assets.py  handler.py
bot/src/_lib/: __init__.py
bot/src/_lib/api/: required_join.py
bot/src/_lib/picture_request/: request.py
bot/src/api/: __init__.py
bot/src/assets/: __init__.py  commands.py  kbs.py  keyboards.py  states.py  texts.py
bot/src/core/: __init__.py  answers.py  api.py  app.py  config.py  controller.py  env.py  helpers.py  utils.py
bot/src/core/buttons/: url.py
bot/src/core/handlers/: __init__.py  conversation.py  handlers.py  helpers.py  query.py  types.py  update.py
bot/src/core/keyboards/: __init__.py  inline.py  keyboard.py  removed_keyboard.py  reply.py  types.py
bot/src/database/: database.py  models.py
bot/src/handlers/: __init__.py  errors.py  get_angry.py  get_avatars.py  main_menu.py  send_picture.py  start.py  text.py
bot/src/handlers/Admin/: __init__.py  assets.py  controller.py  handler.py
bot/src/handlers/GetCommands/: __init__.py  assets.py  controller.py  handler.py  lib.py
bot/src/handlers/MainMenu/: assets.py
bot/src/handlers/SendPicture/: __init__.py  handler.py
bot/src/handlers/Start/: __init__.py  controller.py  handler.py
bot/src/handlers/Text/: __init__.py  handler.py
bot/src/handlers/TextMessage/: controller.py  lib.py
bot/src/handlers/_Errors/: assets.py  controller.py
bot/src/handlers/_Start/: __init__.py
bot/src/handlers/_picture_menu/: assets.py
bot/src/handlers/admin/: __init__.py  admin.py  assets.py  cancel.py
bot/src/handlers/errors/: handler.py
bot/src/handlers/main_menu/: anime_avatars.py  handler.py
bot/src/handlers/picture_menu/: get_another.py  main_menu.py
bot/src/handlers/send_picture/: assets.py  handler.py
bot/src/handlers/start/: assets.py  controller.py  handler.py  lib.py
bot/src/handlers/text/: __init__.py
bot/src/lib/: __init__.py  answers.py  assets.py  broadcast.py  commands.py  consts.py  events.py  helpers.py  invite_links.py  loader.py  picture_request.py  utils.py
bot/src/lib/Admin/: __init__.py  assets.py  handlers.py
bot/src/lib/Broadcast/: __init__.py  assets.py  states.py
bot/src/lib/Confirm/: __init__.py  assets.py  helpers.py
bot/src/lib/GetCommands/: __init__.py  assets.py
bot/src/lib/MainMenu/: __init__.py  assets.py
bot/src/lib/Menu/: __init__.py  assets.py
bot/src/lib/Post/: __init__.py  assets.py
bot/src/lib/Start/: __init__.py  assets.py
bot/src/lib/Text/: __init__.py  assets.py
bot/src/lib/actions/: __init__.py
bot/src/lib/answers/: __init__.py  main_menu.py  required_join.py
bot/src/lib/api/: __init__.py  api.py  chats.py  picture_category.py  pictures.py  required_join.py  utm.py
(+331 files in other folders)
