[project]
name = "AvatarsBot"
version = "1.0.0"
description = ""
authors = []
dependencies = ["ext-mongo>=0.4.0", "i-texts>=0.2.0", "aiogram-ext>=0.4.0"]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pdm.scripts._]
env_file = ".env"
env = { PYTHONPATH = "." }

[tool.pdm.scripts]
start = "python app"

[tool.ruff]
ignore = ["F401"]
