[project]
name = ""
version = ""
description = ""
authors = []
dependencies = [
    "core @ file:///${PROJECT_ROOT}/core",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "typer>=0.7.0",
]

[tool.pdm.scripts]
_.env_file = "../.env"
start = "python src"
g = { call = "cli.generate:main" }