[tool.pdm]

[project]
name = "core"
version = "0.1.0"
description = ""
authors = [
    {name = "levch", email = "levchenko.d.a1998@gmail.com"},
]
dependencies = [
    "aiogram>=2.25.1",
    "httpx>=0.23.3",
    "setuptools>=67.4.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
